retrieveUnpackaged/objects/Document__c.object
<CustomObject>
    <fields>
        <fullName>PRC__c</fullName>
        <inlineHelpText>Program Results Code</inlineHelpText>
        <label>PRC</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>BBFY_EBFY__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>101A46</fullName>
                </value>
                <value>
                    <fullName>101A61</fullName>
                </value>
                <value>
                    <fullName>102A61</fullName>
                </value>
                <value>
                    <fullName>102AH4</fullName>
                </value>
                <value>
                    <fullName>ZZZA73</fullName>
                </value>
                <value>
                    <fullName>000A46</fullName>
                </value>
                <value>
                    <fullName>000A61</fullName>
                </value>
                <value>
                    <fullName>000A73</fullName>
                </value>
                <value>
                    <fullName>000AH4</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Primary__c</fullName>
        <label>Primary</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Procurement_Office__c</fullName>
        <inlineHelpText>Procurement Office</inlineHelpText>
        <label>Contract Procurement Office</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>CPOD - Cincinnati Procurement Operations Division</fullName>
                </value>
                <value>
                    <fullName>HPOD - Headquarters</fullName>
                </value>
                <value>
                    <fullName>RTPPOD - Research Triangle Park</fullName>
                </value>
                <value>
                    <fullName>SACO - Ann Arbor</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Project_Name__c</fullName>
        <formula>Project__r.Project_Code__c &amp;&quot; - &quot;&amp;Project__r.Project__c</formula>
        <label>Project Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Project_Officer_Email__c</fullName>
        <formula>Project_Officer__r.Email</formula>
        <label>Project Officer Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Project_Officer_Phone__c</fullName>
        <formula>Project_Officer__r.Phone</formula>
        <label>Project Officer Phone</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Project_Officer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Project Officer</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Documents (Project Officer)</relationshipLabel>
        <relationshipName>Documents</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Project__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Project &amp; Task search results are dependent on which AHRC is chosen. Consult the &apos;Project&apos; tab for a comprehensive list</inlineHelpText>
        <label>Project &amp; Task</label>
        <lookupFilter>
            <active>true</active>
            <errorMessage>Project  does not exist or does not match filter criteria.</errorMessage>
            <filterItems>
                <field>$Source.AHRC__c</field>
                <operation>equals</operation>
                <valueField>Project__c.AHRC__c</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Project__c</referenceTo>
        <relationshipLabel>Documents</relationshipLabel>
        <relationshipName>Documents</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Record_Type_Code__c</fullName>
        <formula>RecordType.Name</formula>
        <label>Record Type Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Requester__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Requester</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Documents (Requester)</relationshipLabel>
        <relationshipName>Documents5</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Site_Code__c</fullName>
        <label>Site Code</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>LAKM0000 - WCF - Web Forms</fullName>
                </value>
                <value>
                    <fullName>LAKMSC00 - WCF - Web Forms - Security</fullName>
                </value>
                <value>
                    <fullName>LDCD0000 - DCFUEL Database -Development</fullName>
                </value>
                <value>
                    <fullName>LDCM0000 - DCFUEL Database -Maintenance</fullName>
                </value>
                <value>
                    <fullName>LDCMIC00</fullName>
                </value>
                <value>
                    <fullName>LDCMSC00 - DCFUEL Database - Maintenance - Security</fullName>
                </value>
                <value>
                    <fullName>LDCP0000 - DCFUEL Database - Preliminary Design</fullName>
                </value>
                <value>
                    <fullName>LEJM0000 - WCF - ECMS</fullName>
                </value>
                <value>
                    <fullName>LEJMSC00 - WCF - ECMS - Security</fullName>
                </value>
                <value>
                    <fullName>LMFD0000 - MOVES Model - Development</fullName>
                </value>
                <value>
                    <fullName>LMFM0000 - MOVES Model - Maintenance</fullName>
                </value>
                <value>
                    <fullName>LMFMSC00 - MOVES Model - Maintenance - Security</fullName>
                </value>
                <value>
                    <fullName>LMFP0000 - MOVES Model - Preliminary Design</fullName>
                </value>
                <value>
                    <fullName>LNHD0000 - LDMS - Development</fullName>
                </value>
                <value>
                    <fullName>LNHM0000 - LDMS - Maintenance</fullName>
                </value>
                <value>
                    <fullName>LNHMSC00 - LDMS - Maintenance - Security</fullName>
                </value>
                <value>
                    <fullName>LNHP0000 - LDMS - Preliminary Design</fullName>
                </value>
                <value>
                    <fullName>LRBM0000 - WCF - CMS</fullName>
                </value>
                <value>
                    <fullName>LRSD0000 - EPA - Moderated Transaction System -Development</fullName>
                </value>
                <value>
                    <fullName>LRSM0000 - EPA - Moderated Transaction System -Maintenance</fullName>
                </value>
                <value>
                    <fullName>LRSMIC00</fullName>
                </value>
                <value>
                    <fullName>LRSMSC00 - EPA - Moderated Transaction System -Maintenance - Security</fullName>
                </value>
                <value>
                    <fullName>LRSP0000 - EPA - Moderated Transaction System - Preliminary Design</fullName>
                </value>
                <value>
                    <fullName>LSLMIABS - End-User Systems &amp; Support - General Products (not cover by other codes)</fullName>
                </value>
                <value>
                    <fullName>LSLMIABS - WCF - End-User Systems &amp; Support</fullName>
                </value>
                <value>
                    <fullName>LSLMIBBS - Telecommunications System &amp; Support</fullName>
                </value>
                <value>
                    <fullName>LSLMIBBS - WCF - Telecommunications System &amp; Support</fullName>
                </value>
                <value>
                    <fullName>LSLMICBS - Mainframes/Servers Services &amp; Support</fullName>
                </value>
                <value>
                    <fullName>LSLMICBS - WCF - Mainframe/Servers Services &amp; Support</fullName>
                </value>
                <value>
                    <fullName>LSLMSCBS - WCF - End-User Systems &amp; Support - Security</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Sub_Task_Name__c</fullName>
        <formula>Project__r.Sub_Task_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Sub-Task Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TA_Number__c</fullName>
        <label>TA Number</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Task_Name__c</fullName>
        <formula>Project__r.Task_Name__c</formula>
        <label>Task Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Total_Dollar_Amount__c</fullName>
        <formula>Dollar_Amount_1__c + Dollar_Amount_2__c + Dollar_Amount_3__c + Dollar_Amount_4__c + Dollar_Amount_5__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Dollar Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Travel_Destination_Country__c</fullName>
        <label>Travel Destination Country</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>United States</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>Abkhazia</fullName>
                </value>
                <value>
                    <fullName>Afghanistan</fullName>
                </value>
                <value>
                    <fullName>Akrotiri and Dhekelia</fullName>
                </value>
                <value>
                    <fullName>Aland</fullName>
                </value>
                <value>
                    <fullName>Albania</fullName>
                </value>
                <value>
                    <fullName>Algeria</fullName>
                </value>
                <value>
                    <fullName>American Samoa</fullName>
                </value>
                <value>
                    <fullName>Andorra</fullName>
                </value>
                <value>
                    <fullName>Angola</fullName>
                </value>
                <value>
                    <fullName>Anguilla</fullName>
                </value>
                <value>
                    <fullName>Antigua and Barbuda</fullName>
                </value>
                <value>
                    <fullName>Argentina</fullName>
                </value>
                <value>
                    <fullName>Armenia</fullName>
                </value>
                <value>
                    <fullName>Aruba</fullName>
                </value>
                <value>
                    <fullName>Ascension Island</fullName>
                </value>
                <value>
                    <fullName>Australia</fullName>
                </value>
                <value>
                    <fullName>Austria</fullName>
                </value>
                <value>
                    <fullName>Azerbaijan</fullName>
                </value>
                <value>
                    <fullName>Bahamas, The</fullName>
                </value>
                <value>
                    <fullName>Bahrain</fullName>
                </value>
                <value>
                    <fullName>Bangladesh</fullName>
                </value>
                <value>
                    <fullName>Barbados</fullName>
                </value>
                <value>
                    <fullName>Belarus</fullName>
                </value>
                <value>
                    <fullName>Belgium</fullName>
                </value>
                <value>
                    <fullName>Belize</fullName>
                </value>
                <value>
                    <fullName>Benin</fullName>
                </value>
                <value>
                    <fullName>Bermuda</fullName>
                </value>
                <value>
                    <fullName>Bhutan</fullName>
                </value>
                <value>
                    <fullName>Bolivia</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Travel_Destination_State__c</fullName>
        <label>Travel Destination State</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Travel_Destination_Country__c</controllingField>
            <restricted>true</restricted>
            <valueSetName>State_Territory</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Travel_Destination__c</fullName>
        <inlineHelpText>Include State/Province when traveling internationally (city, state)</inlineHelpText>
        <label>Travel Destination City</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Travel_End_Date__c</fullName>
        <label>Travel End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Travel_Purpose__c</fullName>
        <label>Travel Purpose</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>0 - SITE VISIT (NON-SUPERFUND)</fullName>
                </value>
                <value>
                    <fullName>2 - INFORMATIONAL MEETINGS</fullName>
                </value>
                <value>
                    <fullName>3 - TRAINING TRAVEL</fullName>
                </value>
                <value>
                    <fullName>4 - SPEECH OR PRESENTATION</fullName>
                </value>
                <value>
                    <fullName>5 - CONFERENCE TRAVEL</fullName>
                </value>
                <value>
                    <fullName>7 - SPECIAL MISSION TRAVEL</fullName>
                </value>
                <value>
                    <fullName>9 - OTHER TRAVEL</fullName>
                </value>
                <value>
                    <fullName>E - ENFORCEMENT-RELATED (NON-SF)</fullName>
                </value>
                <value>
                    <fullName>S - STATE/LOCAL/TRIBAL-RELATED</fullName>
                </value>
                <value>
                    <fullName>OTHER</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Travel_Start_Date__c</fullName>
        <label>Travel Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Travel_Type__c</fullName>
        <label>Travel Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>TDY</fullName>
                </value>
                <value>
                    <fullName>IND</fullName>
                </value>
                <value>
                    <fullName>FOR</fullName>
                </value>
                <value>
                    <fullName>BTA</fullName>
                </value>
                <value>
                    <fullName>INF</fullName>
                </value>
                <value>
                    <fullName>TXT</fullName>
                </value>
                <value>
                    <fullName>NTX</fullName>
                </value>
                <value>
                    <fullName>LOC</fullName>
                </value>
                <value>
                    <fullName>PCS</fullName>
                </value>
                <value>
                    <fullName>CON</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Traveler__c</fullName>
        <inlineHelpText>Enter name of traveler</inlineHelpText>
        <label>Traveler</label>
        <length>75</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vendor__c</fullName>
        <label>Vendor / Recipient</label>
        <length>180</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Work_Area_Code__c</fullName>
        <formula>IF(LEFT(TEXT(Work_Area__c),FIND(&quot; &quot;,TEXT(Work_Area__c))-1)=&quot;&quot;,TEXT(Work_Area__c),LEFT(TEXT(Work_Area__c),FIND(&quot; &quot;, TEXT(Work_Area__c))-1))</formula>
        <label>Work Area Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Work_Area__c</fullName>
        <label>Budget Org</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>AHRC__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>5600EEN - E-Enterprise</fullName>
                </value>
                <value>
                    <fullName>561 - IMMEDIATE OFFICE - RESERVE</fullName>
                </value>
                <value>
                    <fullName>56A1 - ADMINISTRATION/MGMT</fullName>
                </value>
                <value>
                    <fullName>56A1ZZ - HEI Grant</fullName>
                </value>
                <value>
                    <fullName>56A2 - INFORMATION SYSTEMS</fullName>
                </value>
                <value>
                    <fullName>56A4 - &quot;CLEAN AIR RESERVE</fullName>
                </value>
                <value>
                    <fullName>56A5 - CLIMATE RESERVE</fullName>
                </value>
                <value>
                    <fullName>56A6 - TRANSFERS FROM RESERVES</fullName>
                </value>
                <value>
                    <fullName>56A - IMMEDIATE OFFICE, OTAQ</fullName>
                </value>
                <value>
                    <fullName>56AZZ - IO-OTAQ PAYROLL</fullName>
                </value>
                <value>
                    <fullName>56C0X02 - HORIBA INSTRUMENTS - LICENSE</fullName>
                </value>
                <value>
                    <fullName>56C0X03 - Sensors, Inc., License # 0185-00</fullName>
                </value>
                <value>
                    <fullName>56C0X12 - Environment Canada</fullName>
                </value>
                <value>
                    <fullName>56C0X13</fullName>
                </value>
                <value>
                    <fullName>56C1 - CD Division Management and Support</fullName>
                </value>
                <value>
                    <fullName>56C2 - HD and NR PROGRAMS</fullName>
                </value>
                <value>
                    <fullName>56C3 - REGULATORY AND GENERAL COMPLIANCE</fullName>
                </value>
                <value>
                    <fullName>56C5 - LIGHT-DUTY EMISSIONS</fullName>
                </value>
                <value>
                    <fullName>56C7 - COMPLIANCE INFORMATION TECHNOLOGY (IT)</fullName>
                </value>
                <value>
                    <fullName>56C8 - COMPRESSION-IGNITED ENGINE PROGRAMS</fullName>
                </value>
                <value>
                    <fullName>56C9 - SPARK-IGNITED ENGINE PROGRAMS</fullName>
                </value>
                <value>
                    <fullName>56CA - FUEL IMPLEMENTATION PROGRAMS</fullName>
                </value>
                <value>
                    <fullName>56CB - RF S2/EP ACT IMPLEMENTATION</fullName>
                </value>
                <value>
                    <fullName>56CC - HEAVY DUTY HIGHWAY &amp; NON-ROAD PROGRAM SUPPORT</fullName>
                </value>
                <value>
                    <fullName>56C - COMPLIANCE DIVISION</fullName>
                </value>
                <value>
                    <fullName>56CF - FUELS COMPLIANCE DATA</fullName>
                </value>
                <value>
                    <fullName>56CG - FUELS COMPLIANCE POLICY</fullName>
                </value>
                <value>
                    <fullName>56D1 - ADMINISTRATION/MGMT</fullName>
                </value>
                <value>
                    <fullName>56D2 - INFORMATION SERVICES</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Work_Assignment_Manager_Email__c</fullName>
        <formula>Work_Assignment_Manager__r.Email</formula>
        <label>Work Assignment Manager Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Work_Assignment_Manager_Phone__c</fullName>
        <formula>Work_Assignment_Manager__r.Phone</formula>
        <label>Work Assignment Manager Phone</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Work_Assignment_Manager__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Work Assignment Manager</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Documents (Work Assignment Manager)</relationshipLabel>
        <relationshipName>Documents2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Work_Assignment_TDD_Number__c</fullName>
        <inlineHelpText>Work Assignment/Technical Direction Document Number</inlineHelpText>
        <label>Work Assignment/TDD Number</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <label>Document</label>
    <listViews>
        <fullName>ASD_Documents</fullName>
        <columns>NAME</columns>
        <columns>DCN__c</columns>
        <columns>AHRC__c</columns>
        <columns>BOC_1__c</columns>
        <columns>FOC_1a__c</columns>
        <columns>Project__c</columns>
        <columns>PRC__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>Total_Dollar_Amount__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Document__c.Document,Document__c.Document_Contract,Document__c.Document_Grant,Document__c.Document_IA,Document__c.Document_Other,Document__c.Document_Travel</value>
        </filters>
        <filters>
            <field>AHRC__c</field>
            <operation>equals</operation>
            <value>56H,56H - ASD</value>
        </filters>
        <label>ASD - Documents</label>
    </listViews>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>DCN__c</columns>
        <columns>AHRC__c</columns>
        <columns>AHRC_Code__c</columns>
        <columns>BOC_1__c</columns>
        <columns>TA_Number__c</columns>
        <columns>Project__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>Total_Dollar_Amount__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>CD_17_18_Travel_Documents</fullName>
        <columns>NAME</columns>
        <columns>DCN__c</columns>
        <columns>TA_Number__c</columns>
        <columns>Travel_Destination__c</columns>
        <columns>Travel_Destination_State__c</columns>
        <columns>Work_Area__c</columns>
        <columns>Dollar_Amount_1__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>BBFY_EBFY__c</field>
            <operation>equals</operation>
            <value>2017/2018</value>
        </filters>
        <filters>
            <field>AHRC__c</field>
            <operation>equals</operation>
            <value>56C - CD</value>
        </filters>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Document__c.Document_Travel</value>
        </filters>
        <label>CD 17/18 Travel Documents</label>
    </listViews>
    <listViews>
        <fullName>CD_Documents</fullName>
        <columns>NAME</columns>
        <columns>DCN__c</columns>
        <columns>AHRC__c</columns>
        <columns>BOC_1__c</columns>
        <columns>FOC_1a__c</columns>
        <columns>Project__c</columns>
        <columns>PRC__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>Total_Dollar_Amount__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Document__c.Document,Document__c.Document_Contract,Document__c.Document_Grant,Document__c.Document_IA,Document__c.Document_Other,Document__c.Document_Travel</value>
        </filters>
        <filters>
            <field>AHRC__c</field>
            <operation>equals</operation>
            <value>56C,56C - CD</value>
        </filters>
        <label>CD - Documents</label>
    </listViews>
    <listViews>
        <fullName>Division_Sub_Allocations</fullName>
        <columns>Primary__c</columns>
        <columns>File_Name__c</columns>
        <columns>BBFY_EBFY__c</columns>
        <columns>BOC_Category__c</columns>
        <columns>PRC__c</columns>
        <columns>AHRC_Code__c</columns>
        <columns>Work_Area_Code__c</columns>
        <columns>Project_Name__c</columns>
        <columns>Task_Name__c</columns>
        <columns>Dollar_Amount__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Document__c.Sub_Allocation</value>
        </filters>
        <filters>
            <field>BBFY_EBFY__c</field>
            <operation>equals</operation>
            <value>2016/2017,2017/2018</value>
        </filters>
        <label>Division Sub-Allocations</label>
    </listViews>
    <listViews>
        <fullName>Documents</fullName>
        <columns>NAME</columns>
        <columns>DCN__c</columns>
        <columns>AHRC__c</columns>
        <columns>BOC_1__c</columns>
        <columns>Project__c</columns>
        <columns>PRC__c</columns>
        <columns>Total_Dollar_Amount__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Document__c.Document,Document__c.Document_Contract,Document__c.Document_Grant,Document__c.Document_IA,Document__c.Document_Other,Document__c.Document_Travel</value>
        </filters>
        <label>Documents</label>
    </listViews>
    <listViews>
        <fullName>IO_AA_Documents</fullName>
        <columns>NAME</columns>
        <columns>DCN__c</columns>
        <columns>AHRC__c</columns>
        <columns>BOC_1__c</columns>
        <columns>FOC_1a__c</columns>
        <columns>Project__c</columns>
        <columns>PRC__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>Total_Dollar_Amount__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Document__c.Document,Document__c.Document_Contract,Document__c.Document_Grant,Document__c.Document_IA,Document__c.Document_Other,Document__c.Document_Travel</value>
        </filters>
        <filters>
            <field>AHRC__c</field>
            <operation>equals</operation>
            <value>56E,56E - IO-AA</value>
        </filters>
        <label>IO-AA - Documents</label>
    </listViews>
    <listViews>
        <fullName>IO_DC_Documents</fullName>
        <columns>NAME</columns>
        <columns>DCN__c</columns>
        <columns>AHRC__c</columns>
        <columns>BOC_1__c</columns>
        <columns>FOC_1a__c</columns>
        <columns>Project__c</columns>
        <columns>PRC__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>Total_Dollar_Amount__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Document__c.Document,Document__c.Document_Contract,Document__c.Document_Grant,Document__c.Document_IA,Document__c.Document_Other,Document__c.Document_Travel</value>
        </filters>
        <filters>
            <field>AHRC__c</field>
            <operation>equals</operation>
            <value>56A,56A - IO-DC</value>
        </filters>
        <label>IO-DC - Documents</label>
    </listViews>
    <listViews>
        <fullName>OTAQ_Op_Plan</fullName>
        <columns>NAME</columns>
        <columns>Primary__c</columns>
        <columns>File_Name__c</columns>
        <columns>BBFY_EBFY__c</columns>
        <columns>Appropriation__c</columns>
        <columns>PRC__c</columns>
        <columns>AHRC_Code__c</columns>
        <columns>BOC_Category__c</columns>
        <columns>Work_Area_Code__c</columns>
        <columns>Op_Plan__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Document__c.OTAQ_Op_Plan</value>
        </filters>
        <filters>
            <field>BBFY_EBFY__c</field>
            <operation>equals</operation>
            <value>2018,2018/2019</value>
        </filters>
        <label>OTAQ Op Plan 18/19</label>
    </listViews>
    <listViews>
        <fullName>OTAQ_Op_Plan_17_18</fullName>
        <columns>NAME</columns>
        <columns>Primary__c</columns>
        <columns>File_Name__c</columns>
        <columns>BBFY_EBFY__c</columns>
        <columns>Appropriation__c</columns>
        <columns>PRC__c</columns>
        <columns>AHRC_Code__c</columns>
        <columns>BOC_Category__c</columns>
        <columns>Work_Area_Code__c</columns>
        <columns>Op_Plan__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Document__c.OTAQ_Op_Plan</value>
        </filters>
        <filters>
            <field>BBFY_EBFY__c</field>
            <operation>equals</operation>
            <value>2017,2017/2018</value>
        </filters>
        <label>OTAQ Op Plan 17/18</label>
    </listViews>
    <listViews>
        <fullName>TATD_Documents</fullName>
        <columns>NAME</columns>
        <columns>DCN__c</columns>
        <columns>AHRC__c</columns>
        <columns>BOC_1__c</columns>
        <columns>FOC_1a__c</columns>
        <columns>Project__c</columns>
        <columns>PRC__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>Total_Dollar_Amount__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Document__c.Document,Document__c.Document_Contract,Document__c.Document_Grant,Document__c.Document_IA,Document__c.Document_Other,Document__c.Document_Travel</value>
        </filters>
        <filters>
            <field>AHRC__c</field>
            <operation>equals</operation>
            <value>56D,56D - TATD</value>
        </filters>
        <label>TATD - Documents</label>
    </listViews>
    <listViews>
        <fullName>TCD_Documents</fullName>
        <columns>NAME</columns>
        <columns>DCN__c</columns>
        <columns>TA_Number__c</columns>
        <columns>AHRC__c</columns>
        <columns>BOC_1__c</columns>
        <columns>FOC_1a__c</columns>
        <columns>Project__c</columns>
        <columns>PRC__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>Total_Dollar_Amount__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Document__c.Document,Document__c.Document_Contract,Document__c.Document_Grant,Document__c.Document_IA,Document__c.Document_Other,Document__c.Document_Travel</value>
        </filters>
        <filters>
            <field>AHRC__c</field>
            <operation>equals</operation>
            <value>56F - TCD</value>
        </filters>
        <label>TCD - Documents</label>
    </listViews>
    <listViews>
        <fullName>TCD_F_Documents</fullName>
        <columns>NAME</columns>
        <columns>DCN__c</columns>
        <columns>TA_Number__c</columns>
        <columns>AHRC__c</columns>
        <columns>BOC_1__c</columns>
        <columns>FOC_1a__c</columns>
        <columns>Project__c</columns>
        <columns>PRC__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>Total_Dollar_Amount__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Document__c.Document,Document__c.Document_Contract,Document__c.Document_Grant,Document__c.Document_IA,Document__c.Document_Other,Document__c.Document_Travel</value>
        </filters>
        <filters>
            <field>AHRC__c</field>
            <operation>equals</operation>
            <value>56F - TCD</value>
        </filters>
        <filters>
            <field>DCN__c</field>
            <operation>contains</operation>
            <value>F</value>
        </filters>
        <label>TCD - F Documents</label>
    </listViews>
</CustomObject>